--- a/NewNav.html
+++ b/NewNav.html
@@ -8,10 +8,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Myntra</title>
   </head>
   <body>
+     <div class="page-container">
     <header>
+     
       <div class="HeaderContainer">
         <div class="ImageContainer">
           <img src="/Asset/myntra_logo.webp" alt="Myntra Logo" />
@@ -42,11 +45,12 @@
           </ul>
         </nav>
         <div class="Search">
-          <span class="material-symbols-outlined"> search </span>
+          <!-- <span class="material-symbols-outlined"> search </span> -->
+           <i class="fa-solid fa-magnifying-glass"></i>
           <input
             type="text"
             name="SearchInput"
-            id="Input"
+            class="search-input"
             placeholder="Search for products,brands and more"
           />
         </div>
@@ -66,8 +70,42 @@
         </div>
       </div>
     </header>
+    <hr />
+    <main>
+      <div class="main-container">
+        <h2 class="heading-cat">Category Items</h2>
+        <div class="categoty-item-container">
+        <img src="/Asset/categories/1.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/10.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/2.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/3.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/4.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/5.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/6.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/7.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/8.jpg" class="items" alt="Category">
+        <img src="/Asset/categories/9.jpg" class="items" alt="Category">
+        </div>
+        <h2 class="heading-offer">Offers Items</h2>
+        <div class="offer-items-container">
+          <img src="/Asset/offers/1.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/2.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/3.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/4.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/5.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/6.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/7.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/8.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/9.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/10.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/11.png" class="offer-items" alt="Offers">
+          <img src="/Asset/offers/12.png" class="offer-items" alt="Offers">
+
+        </div>
+      </div>
+    </main>
     <hr>
-    <main></main>
-    <footer></footer>
+    <footer class="footer"> This is the footer....</footer>
+    </div>
   </body>
 </html>
